# sd-upscaler

./: .gitignore  README.md  model_upscaler.py  model_vae.py  pyproject.toml  upscale.py
results/prompt1/: prompt.txt
results/prompt2/: prompt.txt
results/prompt3/: prompt.txt
results/prompt4/: prompt.txt
results/prompt5/: prompt.txt
